--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First pages</title>
 </head>
+<link rel="stylesheet" href="/assets/css/style.css">
 <body>
     <h1>Hello worlds!!!</h1>
     <h2>14030316</h2>
     
+<script src="/assets/js/main.js"></script>
 </body>
 </html>
