--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello worlds!!!</h1>
     <h2>14030316</h2>
-    
+    <h3>edit with git and update and get from desktop with pull git</h3>
 <script src="/assets/js/main.js"></script>
 </body>
 </html>
